@@ -1,0 +1,1 @@
+SELECT field(3) FROM src;
